--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,4 +1,4 @@
 {
-  "extends": "./server/tsconfig.json",
+  "extends": "./tsconfig.json",
   "exclude": ["node_modules", "test", "dist", "src/**/*spec.ts"]
 }
