--- a/server/package.json
+++ b/server/package.json
@@ -26,9 +26,12 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/platform-express": "^7.6.15",
 		"@nestjs/typeorm": "^7.1.5",
+		"class-transformer": "^0.4.0",
+		"class-validator": "^0.13.1",
 		"dotenv": "^10.0.0",
 		"hashids": "^2.2.8",
 		"pg": "^8.6.0",
+		"qrcode": "^1.4.4",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^6.6.6",
