--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,9 @@
 		"@nestjs/typeorm": "^7.1.5",
 		"class-transformer": "^0.4.0",
 		"class-validator": "^0.13.1",
+		"cookie-parser": "^1.4.5",
 		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
 		"hashids": "^2.2.8",
 		"pg": "^8.6.0",
 		"qrcode": "^1.4.4",
