--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.8",
 		"dotenv": "^8.2.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-moment": "^1.1.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.3.4",
@@ -39,6 +41,7 @@
 		]
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^5.5.0",
 		"@types/react-router-dom": "^5.1.7",
 		"@typescript-eslint/eslint-plugin": "^4.28.0",
 		"@typescript-eslint/parser": "^4.28.0",
