--- a/server/package.json
+++ b/server/package.json
@@ -26,12 +26,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/jsonwebtoken": "^8.5.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hashids": "^2.2.8",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "qrcode": "^1.4.4",
     "reflect-metadata": "^0.1.13",
