--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,20 @@
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.8",
 		"dotenv": "^8.2.0",
+		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.2.0",
+		"react-moment": "^1.1.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.3.4",
-		"web-vitals": "^1.1.2"
+		"web-vitals": "^1.1.2",
+		"workbox-core": "^5.1.4",
+		"workbox-expiration": "^5.1.4",
+		"workbox-precaching": "^5.1.4",
+		"workbox-routing": "^5.1.4",
+		"workbox-strategies": "^5.1.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
