--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@react-pdf/renderer": "^2.0.16",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@testing-library/user-event": "^12.8.3",
@@ -18,6 +19,7 @@
 		"react-moment": "^1.1.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-to-print": "^2.12.6",
 		"typescript": "^4.3.4",
 		"web-vitals": "^1.1.2",
 		"workbox-core": "^5.1.4",
