--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^17.0.11",
 		"@types/react-dom": "^17.0.8",
 		"dotenv": "^8.2.0",
+		"framer-motion": "^4.1.17",
 		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
 		"react-moment": "^1.1.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"styled-components": "^5.3.0",
 		"typescript": "^4.3.4",
 		"web-vitals": "^1.1.2",
 		"workbox-core": "^5.1.4",
