--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "author": "Ptolemy, Kenzo, Jose Angel, Will, Juan",
   "license": "ISC",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "commitizen": "^4.2.4",
     "cz-emoji": "^1.3.1",
     "husky": "^6.0.0"
   },
-  "dependencies": {
-    "bcrypt": "^5.0.1"
-  }
+  "dependencies": {}
 }
